--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "volar-service-vetur": "^0.0.31",
     "vue": "^3.4.15"
   },
   "devDependencies": {
